--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,17 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio
+.vs/
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
